--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -1,3 +1,4 @@
+
 /*!
 =========================================================
 * Steller Landing page
@@ -459,8 +460,6 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
   height: auto;
@@ -5043,13 +5042,57 @@ input[type="button"].btn-block {
   border-bottom-left-radius: 0.25rem;
 }
 
-.card-body {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  padding: 1.25rem;
+.card {
+  width: 190px;
+  height: 254px;
+  background: #07182e00;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 20px;
 }
+
+.card h2 {
+  z-index: 1;
+  color: white;
+  font-size: 2em;
+  margin: 0;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  background-image: linear-gradient(90deg, #5784FF 50%, #8A31FF 50%);
+  animation: rotBGimg 10s linear infinite;
+}
+
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: 5px;
+  left: 5px;
+  background: #07182E;
+  border-radius: 15px;
+}
+
 
 .card-title {
   margin-bottom: 0.75rem;
